--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="intro-text">
                         <span class="name">Hello</span>
                         <hr class="star-light">
-                        <span class="skills">I'm Serj, below are some things I have worked on</span>
+                        <span class="skills">Hi, I am an aspiring developer! <a href="/phacking" style="color: #39ff14">Here </a>is a statistical simulation experiment, and below are other things I have worked on. </span> 
                     </div>
                 </div>
             </div>
@@ -170,7 +170,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I am interested in a lot of different things, but the things I enjoy most are solving problems and learning. I am planning on graduating from UT this December with a Mathematics BSA and a Business Foundations Certificate. </p>
+                    <p>I am interested in a lot of different things, but the things I enjoy most are solving problems and learning. I am graduating from UT this May with a Mathematics BSA and a Business Foundations Certificate. </p>
                 </div>
                 <div class="col-lg-4">
                     <p>I made this page and these images to showcase some of my interests and skills and to learn more about HTML and web development tools and methods. My page was built using an open source Bootstrap template which can be found on github: <a href="https://github.com/BlackrockDigital/startbootstrap-freelancer" style="color:#222222"><b>here</b></a> </p>
