--- a/phacking/index.html
+++ b/phacking/index.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">-->
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -61,6 +61,7 @@
 
       <div class="starter-template">
         <h1>Data collection simulator</h1>
+        
         <p class="lead">By manipulating available parameters, see if you can find significant results.<br>Refuse the null hypothesis and accept whatever alternative desired! </p>
       </div>
 
@@ -86,6 +87,10 @@
     
     </div><!-- /.container -->
     <div class="container">
+      <!--<div class="alert alert-success alert-dismissable">
+        <a href="#" class="close" aria-label="close" aria-hidden="true">×</a>
+        <strong>Success!</strong> You have discovered a significant result.
+      </div>-->
       <h2>Results</h2>
       <div class="row">
           <div class="col-md-4"> <h6>mean</h6> <h7 id="sample-mean"></h7> <h6>standard deviation</h6> <h7 id="standard-deviation"></h7>
