--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<script src="//load.sumome.com/" data-sumo-site-id="bff71621ec34633843b5fe73b8c2cd579e19141e1eebcbefc8c020602e513235" async="async"></script>
     <link rel="icon" href="favicon.png">
     <script src="cell_view.js"></script>
     <script src="cellular_automaton.js"></script>
