--- a/diceroller/index.html
+++ b/diceroller/index.html
@@ -20,6 +20,8 @@
     <!-- Custom styles for this template -->
     <link href="starter-template.css" rel="stylesheet">
 
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -76,8 +78,6 @@
         <div class="form-group">
           <label for="samples">sample size:</label>
           <input type="samples" class="form-control" id="samples" placeholder="Enter integer">
-          <label class="radio-inline"  ><input type="radio" name="optradio" checked="checked" id="reset">Reset</label>
-          <label class="radio-inline" id="persist"><input type="radio" name="optradio">Persist</label>
         </div>
         <!--<div class="checkbox">
           <label><input type="checkbox"> Remember me</label>
