--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-	<script src="//load.sumome.com/" data-sumo-site-id="bff71621ec34633843b5fe73b8c2cd579e19141e1eebcbefc8c020602e513235" async="async"></script>
-    <link rel="icon" href="favicon.png">
     <script src="cell_view.js"></script>
     <script src="cellular_automaton.js"></script>
+	<script src="//load.sumome.com/" data-sumo-site-id="bff71621ec34633843b5fe73b8c2cd579e19141e1eebcbefc8c020602e513235" async="async"></script>
+    <link rel="icon" href="favicon.png">
+
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -290,7 +291,7 @@
 It can be seen that for every divisor d of 30, d+30/d is prime.
 
 Find the sum of all positive integers n not exceeding 100 000 000
-such that for every divisor d of n, d+n/d is prime</p> <p>Link to my python solution: <a href="prime.py">here</a></p></p>
+such that for every divisor d of n, d+n/d is prime</p> <p>Link to my python solution: <a href="prime.txt">here</a></p></p>
                             <ul class="list-inline item-details">
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -317,7 +318,7 @@ such that for every divisor d of n, d+n/d is prime</p> <p>Link to my python solu
                             
 <body onload="init();">
                             <!--<img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">-->
-                            <p> I adapted the code from a one dimensional cellular automata viewer to be part of this modal window, because cellular automata are awesome, even one-dimensional ones (rule 110 has been proven to be turing complete!)  
+                            <p> I used the code from a one dimensional cellular automata viewer on github to be part of this modal window, because cellular automata are awesome, even one-dimensional ones (rule 110 has been proven to be turing complete!)  
                             <p></p><a href="https://github.com/mfav/cellview">github source</a></p>
                             <input type="text" id="rule" size="5" type="number" placeholder="0-255">
                             <input type="button" id="go" value="go">
