--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
                            
-                            <p>I wrote some javascript to play a sound when it is my turn to play on jinteki.net, a fan-made project to play Netrunner in a web browser</p>
+                            <p>I wrote some javascript to play a sound when it is my turn to play on jinteki.net, a fan-made project to play Netrunner, a card game, in a web browser</p>
                             <p>Link to the code in a text file: <a href="serjteki.txt">here</a></p>
                             <p>Link you can drag or save to your bookmark bar: <a href="javascript:(function()%7Bvar%20soundAlert%20%3D%20new%20Audio(%22%2Fsound%2Fting.mp3%22)%3Bvar%20target%20%3D%20%24(%22%5Bdata-reactid%3D'.7.0.1.1.1.0'%5D%22)%5B0%5D%3Bvar%20observer%20%3D%20new%20MutationObserver(function(mutations)%7Bmutations.forEach(function(mutation)%20%7Bif%20(mutation.addedNodes.length%3E%3D1)%7Bif%20(mutation.addedNodes%5B0%5D.firstChild.data%20%3D%3D%20'Start%20Turn')%7Bconsole.log('success')%3BsoundAlert.play()%3B%7Dif(mutation.addedNodes%5B0%5D.firstChild.data%20%3D%3D%20'No%20more%20action')%7BsoundAlert.play()%3B%7Dif(mutation.addedNodes%5B0%5D.firstChild.data%20%3D%3D%20'Action%20before%20access')%7BsoundAlert.play()%3B%7D%7D%7D)%3B%7D)%3Bvar%20config%20%3D%20%7B%20attributes%3A%20true%2C%20childList%3A%20true%2C%20characterData%3Atrue%20%7D%3Bobserver.observe(target%2Cconfig)%7D)()">jinteki alert</a></p>
                             <p>(Click your bookmark once you see the "Keep Hand" button in game)</p>
