--- a/phck/index.html
+++ b/phck/index.html
@@ -29,6 +29,7 @@
   </head>
 
   <body>
+    
     <script src="main.js"></script>
     <script src="script.js"></script>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -94,7 +95,7 @@
           </div>
           <div class="col-md-4"> <h6>z-test</h6> <h7 id="z-score"></h7> <h6>p-value</h6> <h7 id="z-p-value"></h7>
           </div>
-          <div class="col-md-4"> <h6>t-test</h6> <h7 id="t-score"></h7> <h6>p-value</h6> <h7 id="t-p-value"></h7>
+          <div class="col-md-4"><canvas id='cv' width = 600 height=200> </canvas> <h6>t-test</h6> <h7 id="t-score"></h7> <h6>p-value</h6> <h7 id="t-p-value"></h7>
           </div>
       </div>
 
