--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="intro-text">
                         <span class="name">Hello</span>
                         <hr class="star-light">
-                        <span class="skills">Hi, I am an aspiring developer! <a href="/phck" style="color: #39ff14">Here </a>is a statistical simulation experiment, and below are other things I have worked on. </span> 
+                        <span class="skills">Hi, I am an aspiring developer! <a href="/phck" style="color: #39ff14">Here </a>is a statistical simulator I made,  and below are other things I have worked on. </span> 
                     </div>
                 </div>
             </div>
@@ -173,9 +173,10 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>I am interested in a lot of different things, but the things I enjoy most are solving problems and learning. I am graduating from UT this May with a Mathematics BSA and a Business Foundations Certificate. </p>
+                    <p>My resume is <a href="https://www.s3rj.com/resume.pdf" style="color:#222222"><b>here</b></a> </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>I made this page and these images to showcase some of my interests and skills and to learn more about HTML and web development tools and methods. My page was built using an open source Bootstrap template which can be found on github: <a href="https://github.com/BlackrockDigital/startbootstrap-freelancer" style="color:#222222"><b>here</b></a> </p>
+                    <p>I made this page and these images to showcase some of my interests and skills and to learn more about web development tools and methods. My page was built using an open source Bootstrap template which can be found on github <a href="https://github.com/BlackrockDigital/startbootstrap-freelancer" style="color:#222222"><b>here</b></a> </p>
                 </div>
             </div>
         </div>
@@ -258,7 +259,7 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
                            
-                            <p>I wrote some javascript to play a sound when it is my turn to play on jinteki.net, a fan-made project to play Netrunner, a card game, in a web browser</p>
+                            <p>To learn more about JavaScript, I made a modification to a browser based implementation of the card/board game, Netrunner. My JavaScript bookmarklet plays an alert sound when it is my turn to play or make an action, so that I don't keep my opponent waiting or so I can do something else if my opponent is taking a while to think out their move.</p>
                             <p>Link to the code in a text file: <a href="serjteki.txt">here</a></p>
                             <p>Link you can drag or save to your bookmark bar: <a href="javascript:(function()%7Bvar%20soundAlert%20%3D%20new%20Audio(%22%2Fsound%2Fting.mp3%22)%3Bvar%20target%20%3D%20%24(%22%5Bdata-reactid%3D'.7.0.1.1.1.0'%5D%22)%5B0%5D%3Bvar%20observer%20%3D%20new%20MutationObserver(function(mutations)%7Bmutations.forEach(function(mutation)%20%7Bif%20(mutation.addedNodes.length%3E%3D1)%7Bif%20(mutation.addedNodes%5B0%5D.firstChild.data%20%3D%3D%20'Start%20Turn')%7Bconsole.log('success')%3BsoundAlert.play()%3B%7Dif(mutation.addedNodes%5B0%5D.firstChild.data%20%3D%3D%20'No%20more%20action')%7BsoundAlert.play()%3B%7Dif(mutation.addedNodes%5B0%5D.firstChild.data%20%3D%3D%20'Action%20before%20access')%7BsoundAlert.play()%3B%7D%7D%7D)%3B%7D)%3Bvar%20config%20%3D%20%7B%20attributes%3A%20true%2C%20childList%3A%20true%2C%20characterData%3Atrue%20%7D%3Bobserver.observe(target%2Cconfig)%7D)()">jinteki alert</a></p>
                             <p>(Click your bookmark once you see the "Keep Hand" button in game)</p>
@@ -324,11 +325,7 @@ such that for every divisor d of n, d+n/d is prime</p> <p>Link to my python solu
                             <input type="button" id="go" value="go">
                             <input type="button" id="stop" value="stop">
                             <p>
-                              try: <a href="#28">28</a>, <a href="#30">30</a>, <a href="#54">54</a>,
-                              <a href="#60">60</a>, <a href="#62">62</a>, <a href="#73">73</a>,
-                              <a href="#90">90</a>, <a href="#94">94</a>, <a href="#110">110</a>,
-                              <a href="#150">150</a>, <a href="#158">158</a>, <a href="#165">165</a>,
-                              <a href="#188">188</a>, <a href="#190">190</a>, <a href="#220">220</a>,
+                              ,
                             
                             </p>
                             <canvas id="canvas" width="300" height="540">
