--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="intro-text">
                         <span class="name">Hello</span>
                         <hr class="star-light">
-                        <span class="skills">Hi, I am an aspiring developer! <a href="/phck" style="color: #39ff14">Here </a>is a statistical simulator I made,  and below are other things I have worked on. </span> 
+                        <span class="skills">Hi, I am an aspiring developer! <a href="/phck" style="color: #39ff14">Here </a>is a statistical widget I made,  and below are other things I made </span> 
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I am interested in a lot of different things, but the things I enjoy most are solving problems and learning. I am graduating from UT this May with a Mathematics BSA and a Business Foundations Certificate. </p>
+                    <p>I am interested in a lot of different things, but the things I enjoy most are solving problems and learning. I graduated from UT in May 2017 with a BSA in Mathematics. </p>
                     <p>My resume is <a href="https://www.s3rj.com/resume.pdf" style="color:#222222"><b>here</b></a> </p>
                 </div>
                 <div class="col-lg-4">
