--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="splashContent">
 
       <div id="splashText">
-        <h2 style="font-family: 'Open Sans', sans-serif;"> <span>😃	</span>hey there, I'm Serj</h2>
+        <h2 style="font-family: 'Open Sans', sans-serif;"> <span>😃	</span>howdy, I'm Serj</h2>
         <h1 style="font-family: 'Open Sans', sans-serif;">I'm thinking about...</h1>
         <div class="crt" id="splashInsert">
           <h2>...<div id="splashLoader"></div></h2>
