--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
 
 
 <body>
+
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
+
+  <!--<div class="particles" id="particles-js"> test </div>-->
   <!-- header navbar -->
   <nav>
     <div class="logo">
@@ -43,7 +46,7 @@
   </nav>
 
   <!-- page1 -->
-  <div class="screen" id="screen1">
+  <div class="screen particles" id="screen1">
     <div id="splashContent">
 
       <div id="splashText">
@@ -186,6 +189,7 @@
 
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/particles.js"></script>
 
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
@@ -195,7 +199,11 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+
+
+
 </body>
+
 
 </html>
 
