--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
   <!--<div class="particles" id="particles-js"> test </div>-->
   <!-- header navbar -->
+  <div class="particles" id="particles-js"></div>
   <nav>
     <div class="logo">
       <a href="#">home</a>
@@ -45,9 +46,11 @@
       <ul>
   </nav>
 
+
   <!-- page1 -->
-  <div class="screen particles" id="screen1">
-    <div id="splashContent">
+
+  <div class="screen" id="screen1">
+   <div id="splashContent">
 
       <div id="splashText">
         <h2 style="font-family: 'Open Sans', sans-serif;"> <span>😃	</span>howdy, I'm Serj</h2>
@@ -63,6 +66,8 @@
 
     </div>
   </div>
+
+
 
   <!-- page2 -->
   <div class="screen" id="screen2">
@@ -201,7 +206,7 @@
   <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 
 
-
+ -->
 </body>
 
 
