--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 
       <!-- Square card 2 -->
-      <div class="demo-card-square mdl-card mdl-shadow--2dp">
+      <!-- <div class="demo-card-square mdl-card mdl-shadow--2dp">
         <div class="mdl-card__title mdl-card--expand" id="square2">
           <h2 class="mdl-card__title-text">C-Corner</h2>
         </div>
@@ -123,7 +123,7 @@
           <img id="icon" src="img/heroku.png">
 
         </div>
-      </div>
+      </div> -->
 
       <!--  ha  -->
 
