--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div id="splashText">
         <h2 style="font-family: 'Open Sans', sans-serif;"> <span>😃	</span>howdy, I'm Serj</h2>
-        <h1 style="font-family: 'Open Sans', sans-serif;">I'm thinking about...</h1>
+        <h1 style="font-family: 'Open Sans', sans-serif;">I'm pondering...</h1>
         <div class="crt" id="splashInsert">
           <h2>...<div id="splashLoader"></div></h2>
         </div>
@@ -74,6 +74,28 @@
     <div class="spacer" id="portfolio">   <h2 style="color:white; text-decoration: underline;font-family: 'Open Sans', sans-serif;" >Projects</h2> </div>
     <div id="projectHolder">
 
+      <!-- Square card 0 -->
+      <div class="demo-card-square mdl-card mdl-shadow--2dp">
+        <div class="mdl-card__title mdl-card--expand" id="square0">
+          <h2 style="color:black;"class="mdl-card__title-text">Tower Defense</h2>
+        </div>
+        <div class="mdl-card__supporting-text">
+          Tower defense game created at Diversity Hackathon with javascript and canvas.
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+          <a href="https://github.com/s3rj/towerDefense" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            github
+          </a>
+          <a href="http://s3rj.com/towerDefense" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            live demo
+          </a>
+          <img id="icon" src="img/javascript.png">
+          <img id="icon" src="img/html5.svg">
+
+        </div>
+      </div>
+
+      <!--  ha  -->
 
       <!-- Square card 1 -->
       <div class="demo-card-square mdl-card mdl-shadow--2dp">
